<resources>
    <string name="app_name">GeoBuddies</string>

    <!--> Api strings <-->
    <string name="register_url">api/v1/auth/register</string>
    <string name="brand_name">GeoBuddies</string>

    <!--> registration fragment <-->
    <string name="create_account">Create\naccount</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="your_name">your name</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>

    <!--> login fragment <-->
    <string name="login_button">Login</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="forgot_password">Forgot password</string>
    <string name="google">Google</string>
    <string name="yandex">Яндекс</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_field_must_not_be_empty">The field must not be empty</string>

    <!--> friend_search_fragment <-->
    <string name="no_users_found">no users found</string>
    <string name="invite_sent">invite sent</string>

    <!--> accept_deny_invites_fragment <-->
    <string name="no_invites">there are no invites</string>
    <string name="invite_accepted">invite accepted</string>
    <string name="invite_denied">invite denied</string>

    <!--> friends_screen_fragment <-->
    <string name="no_frineds">there are no friends</string>
    <string name="friend_deleted">friend deleted</string>

    <!--> common error <-->
    <string name="error_part_1">smth went wrong...</string>
    <string name="error_part_2">try again later</string>
    <string name="menu_my_friends">My friends</string>
    <string name="menu_add_friends">Add friends</string>
    <string name="menu_invites">Invites</string>
    <string name="menu_logout">Logout</string>

    <!--> AlertDialog location <-->
    <string name="title_why_location_permission_needed">Location permission</string>
    <string name="msg_why_location_permission_needed">This app requires location permission to display you on a map and share your coordinates with your friends.\nDo you want to grant this permission?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--> Location permission messages <-->
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_permission_granted">Location permission granted</string>
    <!--> Location get messages <-->
    <string name="failed_to_get_location">Failed to get location</string>

    <!--> greeting messages <-->
    <string name="hello">Hello!</string>
    <string name="welcome_to_the_geo_buddies">Welcome to the GeoBuddies!</string>

</resources>