<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_backround_dark_theme"
    tools:context=".presentation.views.MainActivity">


    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="-120dp"
        android:background="@drawable/gray_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-355dp"
        android:layout_marginEnd="-170dp"
        android:src="@drawable/moscow_map"
        app:civ_border_color="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/login_fragment_logo_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:src="@drawable/logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.surf2024.geobuddies.presentation.feature.GradientTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/brand_name"
            android:textColor="@color/cardview_dark_background"
            android:textSize="32sp"
            app:angle="45"
            app:centerColor="@color/center_gradient_color"
            app:endColor="@color/end_gradient_color"

            app:layout_constraintEnd_toEndOf="@+id/login_fragment_logo_imageview"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="@+id/login_fragment_logo_imageview"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_logo_imageview"
            app:startColor="@color/start_gradient_color"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_email_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/fieldTextViewDarkMode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/gray_circle"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingVertical="0dp"
                android:textColorHint="@color/field_text_color_dark_theme" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_password_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="15dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_email_textInput"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/fieldTextViewDarkMode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_circle"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="0dp"
                android:textColorHint="@color/field_text_color_dark_theme" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/sign_up"
            style="@style/LoginFragmentTextViewButton"
            app:layout_constraintStart_toStartOf="@+id/login_fragment_password_textInput"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_password_textInput" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/forgot_password"
            style="@style/LoginFragmentTextViewButton"
            app:layout_constraintEnd_toEndOf="@+id/login_fragment_password_textInput"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_password_textInput" />

        <android.widget.Button
            android:id="@+id/login_fragment_login_button"
            style="@style/LoginAndSignUpTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/gradient_circle"
            android:gravity="center"
            android:text="@string/login_button"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingBottom="20dp"
            android:text="@string/or_connect_with"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_login_button" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/google_logo"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/yandex_znak"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            style="@style/LoginFragmentPartnerTextView"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yandex"
            style="@style/LoginFragmentPartnerTextView"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>