<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/fragment_backround_dark_theme"
    tools:context=".presentation.views.RegistrationFragment">


    <ImageView
        android:id="@+id/back_button_registration_fragment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:scaleType="center"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account_textview_registration_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/create_account"
        android:textColor="@color/field_text_white_color_dark_theme"
        android:textSize="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_registration_fragment"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_fragment_email_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/create_account_textview_registration_fragment"
        app:hintEnabled="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/fieldTextViewDarkMode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:paddingVertical="0dp"
            android:textColorHint="@color/field_text_color_dark_theme"
            android:hint="@string/email"
            android:background="@drawable/gray_circle"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_fragment_name_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_email_textInput"
        app:hintEnabled="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/fieldTextViewDarkMode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gray_circle"
            android:paddingVertical="0dp"
            android:hint="@string/your_name"
            android:textColorHint="@color/field_text_color_dark_theme"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_fragment_password_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_name_textInput"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/fieldTextViewDarkMode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingVertical="0dp"
            android:background="@drawable/gray_circle"
            android:hint="@string/password"
            android:textColorHint="@color/field_text_color_dark_theme"
            android:inputType="textPassword"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_fragment_confirmpassword_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_password_textInput"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/fieldTextViewDarkMode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gray_circle"
            android:hint="@string/confirm_password"
            android:paddingVertical="0dp"

            android:textColorHint="@color/field_text_color_dark_theme"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/sign_up_fragment_registation_button"
        style="@style/LoginAndSignUpTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_circle"
        android:gravity="center"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registration_fragment_confirmpassword_textInput"
        app:layout_constraintStart_toStartOf="@+id/registration_fragment_confirmpassword_textInput"
        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_confirmpassword_textInput"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>