<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.MapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_map_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/id_mapview"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/map_pin_imageview"
            android:layout_width="65dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_map_pin" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/map_pin_profile_image"
            android:layout_width="55dp"
            android:layout_height="57dp"
            android:layout_marginTop="1dp"
            android:src="@drawable/ic_default_profile_image"
            app:civ_border_color="@color/pin_civ_color"
            app:civ_border_width="2.5dp"
            app:civ_circle_background_color="@color/default_profile_background_dark_theme"
            app:layout_constraintBottom_toBottomOf="@+id/map_pin_imageview"
            app:layout_constraintEnd_toEndOf="@+id/map_pin_imageview"
            app:layout_constraintStart_toStartOf="@+id/map_pin_imageview"
            app:layout_constraintTop_toTopOf="@+id/map_pin_imageview"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:background="@color/fragment_backround_dark_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_toggle_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/id_mapview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />



    <FrameLayout
        android:id="@+id/sideMenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/id_menu_part1"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/profile_backround_dark_theme"
            android:orientation="vertical"
            android:visibility="gone">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/menu_profile_image"
                android:layout_width="103dp"
                android:layout_height="103dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_default_profile_image"
                app:civ_border_color="@color/menu_profile_civ"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/default_profile_background_dark_theme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/menu_user_name"
                style="@style/MenuUserNameTextDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Uma Thurman" />

            <TextView
                android:id="@+id/menu_user_email"
                style="@style/MenuUserEmailTextDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="uma@mail.ru" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_menu_part2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@color/fragment_backround_dark_theme"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/menu_friends_imageview"
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_friends"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/menu_add_friends_imageview"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_add_friend"
                app:layout_constraintStart_toStartOf="@+id/menu_friends_imageview"
                app:layout_constraintTop_toBottomOf="@+id/menu_friends_imageview" />

            <ImageView
                android:id="@+id/menu_invites_imageview"
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_invites"
                app:layout_constraintStart_toStartOf="@+id/menu_add_friends_imageview"
                app:layout_constraintTop_toBottomOf="@+id/menu_add_friends_imageview" />

            <ImageView
                android:id="@+id/menu_logout_imageview"
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_logout"
                app:layout_constraintStart_toStartOf="@+id/menu_invites_imageview"
                app:layout_constraintTop_toBottomOf="@+id/menu_invites_imageview" />

            <TextView
                android:id="@+id/menu_my_friends"
                style="@style/MenuSectionsText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/menu_my_friends"
                app:layout_constraintStart_toEndOf="@+id/menu_friends_imageview"
                app:layout_constraintTop_toTopOf="@+id/menu_friends_imageview" />

            <TextView
                android:id="@+id/menu_add_friends"
                style="@style/MenuSectionsText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/menu_add_friends"
                app:layout_constraintStart_toEndOf="@+id/menu_add_friends_imageview"
                app:layout_constraintTop_toTopOf="@+id/menu_add_friends_imageview" />

            <TextView
                android:id="@+id/menu_invites"
                style="@style/MenuSectionsText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/menu_invites"
                app:layout_constraintStart_toEndOf="@+id/menu_invites_imageview"
                app:layout_constraintTop_toTopOf="@+id/menu_invites_imageview" />

            <TextView
                android:id="@+id/menu_logout"
                style="@style/MenuSectionsText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/menu_logout"
                app:layout_constraintStart_toEndOf="@+id/menu_logout_imageview"
                app:layout_constraintTop_toTopOf="@+id/menu_logout_imageview" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
